--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  get: ^4.7.2
   get_storage: ^2.1.1
   google_fonts: ^6.2.1
   hexcolor: ^3.0.1
   lottie: ^3.1.3
   zoom_tap_animation: ^1.1.0
   intl: ^0.20.1
+  http: ^1.3.0
+  import_sorter: ^4.6.0
 
 dev_dependencies:
   flutter_test:
